# mysylar

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  config.cc  config.hpp  logger.cc  logger.h  logger.hpp  singleton.hpp  utils.hpp
tests/: CMakeLists.txt  configtest.cc  logtest.cc
